# invoconnect_backend

./: .gitignore  README.md  manage.py  pyproject.toml
apps/users/: admin.py  models.py  permissions.py  serializers.py  views.py
invoconnect/: asgi.py  settings.py  urls.py  wsgi.py
invoconnect/settings/: base.py
