[tool.poetry]
name = "invoconnect"
version = "1.0.1"
description = ""
authors = ["prathameshkhade <pkhade2865@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
djangorestframework = "^3.15.2"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
celery = "^5.4.0"
django-cors-headers = "^4.6.0"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
sentry-sdk = "^2.19.0"
factory-boy = "^3.3.1"
reportlab = "^4.2.5"
django-filter = "^24.3"
python-magic = "^0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
